# smart_idler

./: .gitignore  Cargo.toml  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
controller/: Cargo.toml  build.rs  tauri.conf.json
controller/icons/: icon.icns
controller/src/: commands.rs  main.rs
controller/ui/: index.html  main.js
crates/app_controller/: Cargo.toml
crates/app_controller/src/: lib.rs
crates/cell_data/: Cargo.toml
crates/cell_data/src/: lib.rs
crates/idler_utils/: Cargo.toml
crates/idler_utils/src/: lib.rs
crates/mitigations/: Cargo.toml
crates/mitigations/src/: lib.rs
crates/registry_ops/: Cargo.toml
crates/registry_ops/src/: lib.rs
idler_utils/: Cargo.toml
idler_utils/src/: cell_data.rs  db_ops.rs  idler_win_utils.rs  lib.rs  process_ops.rs  registry_ops.rs  sch_tasker.rs  single_instance.rs  win_mitigations.rs  win_mnts.rs
smart_tray/: Cargo.toml  build.rs  idler.manifest  tauri.conf.json
smart_tray/icons/: icon.icns
smart_tray/src/: app_controller.rs  cli.rs  commands.rs  main.rs  registry_plugin.rs  tray.rs
smart_tray/ui/: index.html  main.js  styles.css  template.js
