[workspace]
members = ["smart_tray"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["SI"]
edition = "2021"
rust-version = "1.81"

license-file = "LICENSE"

[workspace.dependencies]
tauri = "1.7"
tauri-build = { version = "1.5", features = [] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
once_cell = { version = "1.19" }
windows = "0.58"
msvc_spectre_libs = "0.1"
link-cplusplus = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.dev]
panic = "abort"
overflow-checks = true
incremental = true
debug = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
