[workspace]
members = [
    "smart_tray",
    "crates/idler_utils",
    "crates/registry_ops",
    "crates/cell_data",
    "crates/mitigations",
    "crates/app_controller",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["SI"]
edition = "2021"
rust-version = "1.81"

license-file = "LICENSE"

[workspace.dependencies]
idler_utils = { path = "crates/idler_utils" }
registry_ops = { path = "crates/registry_ops" }
cell_data = { path = "crates/cell_data" }
mitigations = { path = "crates/mitigations" }
app_controller = { path = "crates/app_controller" }

tauri = "1.8"
tauri-build = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
once_cell = { version = "1.19" }
windows = "0.58"
clap = { version = "4.5", features = ["derive"] }
const-random = { version = "0.1" }
msvc_spectre_libs = "0.1"
link-cplusplus = "1.0"
libloading = { version = "0.8" }
tokio = { version = "1.40", features = ["full"] }
rayon = "1.10"
tracing = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.dev]
panic = "abort"
overflow-checks = true
incremental = true
debug = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
