[workspace]
members = [
    "smart_tray",
    "crates/idler_utils",
    "crates/registry_ops",
    "crates/cell_data",
    "crates/mitigations",
    "crates/app_controller",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["SI"]
edition = "2021"
rust-version = "1.85.0"

license-file = "LICENSE"

[workspace.dependencies]
idler_utils = { path = "crates/idler_utils" }
registry_ops = { path = "crates/registry_ops" }
cell_data = { path = "crates/cell_data" }
mitigations = { path = "crates/mitigations" }
app_controller = { path = "crates/app_controller" }

tauri = "1.8.2"
tauri-build = { version = "1.5.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0"}
chrono = { version = "0.4"}
once_cell = { version = "1.21" }
windows = { version = "0.60"}
clap = { version = "4.5", features = ["derive"] }
const-random = { version = "0.1" }
msvc_spectre_libs = "0.1"
tokio = { version = "1.44", features = ["full"] }
rayon = { version = "1.10"}
tracing = { version = "0.1"}

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.dev]
panic = "abort"
overflow-checks = true
incremental = true
debug = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
