[package]
name = "controller"
description = "Visual Idler - controller"

version.workspace = true
authors.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
idler_utils = { path = "../idler_utils" }

log = { workspace = true }
env_logger = { workspace = true }
tauri = { workspace = true, features = [ "shell-open"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
