[package]
name = "idler_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

sysinfo = "0.30.5"
winreg = "0.52.0"
chrono = "0.4.34"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_TaskScheduler",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Console",
    "Win32_Security"
]