[package]
name = "smart_tray"
description = "Visual Idler - tray"
build = "build.rs"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { workspace = true }
tauri-winres = "0.1"

[dependencies]
idler_utils = { path = "../idler_utils" }

serde = { workspace = true, features = ["derive", "rc"] }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
msvc_spectre_libs = { workspace = true }
link-cplusplus = { workspace = true }
tauri = { workspace = true, features = [
  "system-tray",
  "shell-open",
  "notification-all",
  "window-close",
  "window-hide",
  "window-show",
] }

clap = { version = "4.5", features = ["derive"] }
const-random = { version = "0.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true

[package.metadata.tauri-winres]
LegalCopyright = "©2024 SI"
OriginalFilename = "tray.exe"
