[package]
name = "smart_tray"
description = "Visual Idler - tray"
build = "build.rs"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { workspace = true }
tauri-winres = "0.3.0"

[dependencies]
idler_utils = { workspace = true }
registry_ops = { workspace = true }
cell_data = { workspace = true }
mitigations = { workspace = true }
app_controller = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"

serde = { workspace = true, features = ["derive", "rc"] }
anyhow = { workspace = true }
once_cell = { workspace = true }
msvc_spectre_libs = { workspace = true }
tauri = { workspace = true, features = [
  "system-tray",
  "shell-open",
  "notification-all",
  "window-close",
  "window-hide",
  "window-show",
] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true

[package.metadata.tauri-winres]
LegalCopyright = "©2024 SI"
OriginalFilename = "tray.exe"
