[package]
name = "idler_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
registry_ops = { workspace = true }
cell_data = { workspace = true }
mitigations = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
windows = { workspace = true, features = [
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_System_Power",
  "Win32_System_SystemInformation",
  "Win32_Foundation",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

rand = { version = "0.9" }

[lints]
workspace = true
