[package]
name = "mitigations"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
registry_ops = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }
windows = { workspace = true, features = [
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_System_Com",
  "Win32_Security",
  "Win32_System_TaskScheduler",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Console",
  "Win32_System_SystemServices",
  "Win32_Security",
  "Wdk_System_Threading",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }

[lints]
workspace = true
