[package]
name = "mitigations"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }
windows = { workspace = true, features = [
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
  "Wdk_System_Threading",
  "Win32_System_Pipes",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_System_SystemServices",
  "Win32_Storage_FileSystem",
  "Win32_Storage",
  "Win32_Security"
] }

[lints]
workspace = true
